--- a/styles/base/_globals.scss
+++ b/styles/base/_globals.scss
@@ -1,5 +1,20 @@
 @use "helpers" as *;
 
+html {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+// * {
+//   border: 1px solid red;
+// }
+
 body {
   @include fluid-text(16, 14);
 
@@ -7,4 +22,101 @@ body {
   line-height: 1.5;
   color: var(--color-dark);
   background-color: var(--color-light);
+}
+
+h1,
+.h1 h2,
+.h2 h3,
+.h3 h4,
+.h4 h5,
+.h5 h6,
+.h6 {
+  color: var(--color-dark);
+  font-weight: 700;
+}
+
+h1,
+.h1 {
+  @include fluid-text(48, 28);
+  line-height: 1.56;
+}
+h2,
+.h2 {
+  @include fluid-text(24, 20);
+  line-height: 1.32;
+}
+h3,
+.h3 {
+  @include fluid-text(18, 14);
+  line-height: 1.24;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+a,
+label,
+button,
+input,
+textarea,
+select,
+svg * {
+  transition-duration: var(--transition-duration);
+}
+
+a {
+  display: inline-block;
+  color: inherit;
+  text-decoration: none;
+}
+
+a {
+  color: var(--color-light);
+
+  @include hover {
+    text-decoration: underline;
+    color: var(--color-blue-butto);
+  }
+
+  &[class] {
+    text-decoration: none;
+  }
+}
+
+:focus-visible {
+  outline: rem(2) solid var(--color-blue-butto);
+  outline-offset: rem(4);
+}
+
+img {
+  max-width: 100%;
+  display: block;
+  -o-object-fit: cover;
+  object-fit: cover;
+}
+
+body {
+  min-width: 360px;
+  word-break: normal;
+}
+
+li,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+button {
+  padding: 0;
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
 }
