--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -12,6 +12,9 @@
   --color-dark-60: rgba(var(--color-dark-rgb), 0.6);
   --color-dark-40: rgba(var(--color-dark-rgb), 0.4);
   --color-dark-20: rgba(var(--color-dark-rgb), 0.2);
+  --color-dark-12: rgba(var(--color-dark-rgb), 0.12);
+
+  --border-radius: 50px;
 
   --font-family-base: "Roboto", "sans-serif";
   --font-family-accent: "Montserrat", "sans-serif";
