--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,5 +7,6 @@
 @use "blocks/header";
 @use "blocks/logo";
 @use "blocks/botton";
-@use "blocks//button-search";
+@use "blocks/button-icon";
+@use "blocks/burger-button";
 
