--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,4 +9,7 @@
 @use "blocks/botton";
 @use "blocks/button-icon";
 @use "blocks/burger-button";
+@use "blocks/section";
+@use "blocks/hero";
+@use "blocks/search-form";
 
