--- a/styles/base/_variables.scss
+++ b/styles/base/_variables.scss
@@ -14,6 +14,7 @@
   --color-dark-20: rgba(var(--color-dark-rgb), 0.2);
   --color-dark-12: rgba(var(--color-dark-rgb), 0.12);
   --color-dark-8: rgba(var(--color-dark-rgb), 0.08);
+  --color-dark-6: rgba(var(--color-dark-rgb), 0.06);
   --color-dark-2: rgba(var(--color-dark-rgb), 0.02);
 
   --border-radius: 50px;
