--- a/styles/style.css
+++ b/styles/style.css
@@ -362,6 +362,7 @@ template {
   --color-dark-20: rgba(var(--color-dark-rgb), 0.2);
   --color-dark-12: rgba(var(--color-dark-rgb), 0.12);
   --color-dark-8: rgba(var(--color-dark-rgb), 0.08);
+  --color-dark-6: rgba(var(--color-dark-rgb), 0.06);
   --color-dark-2: rgba(var(--color-dark-rgb), 0.02);
   --border-radius: 50px;
   --font-family-base: "Roboto", "sans-serif";
@@ -563,6 +564,50 @@ button[aria-label]::before {
   content: "";
 }
 
+.grid {
+  --gridColumns: 1;
+  display: grid;
+  grid-template-columns: repeat(var(--gridColumns), 1fr);
+  column-gap: 2.5rem;
+  row-gap: 3rem;
+}
+.grid--2 {
+  --gridColumns: 2;
+}
+.grid--3 {
+  --gridColumns: 3;
+}
+.grid--4 {
+  --gridColumns: 4;
+}
+.grid--5 {
+  --gridColumns: 5;
+}
+.grid--6 {
+  --gridColumns: 6;
+}
+.grid--7 {
+  --gridColumns: 7;
+}
+.grid--8 {
+  --gridColumns: 8;
+}
+.grid--9 {
+  --gridColumns: 9;
+}
+.grid--10 {
+  --gridColumns: 10;
+}
+.grid--11 {
+  --gridColumns: 11;
+}
+.grid--12 {
+  --gridColumns: 12;
+}
+.grid--3 {
+  row-gap: 3rem;
+}
+
 .header {
   position: sticky;
   z-index: 100;
@@ -612,35 +657,41 @@ button[aria-label]::before {
   }
 }
 
-.botton {
+.button {
+  font-size: clamp(1rem, 1rem + 0vw, 1rem);
   padding: 0.5rem 1rem;
-  color: var(--color-dark);
+  font-weight: 400;
   line-height: 1.24;
+  color: var(--color-dark);
   background-color: var(--color-gra-bg);
 }
 @media (any-hover: hover) {
-  .botton:hover {
-    background-color: var(--color-dark-60);
+  .button:hover {
+    background-color: var(--color-dark-20);
   }
 }
 @media (any-hover: none) {
-  .botton:active {
-    background-color: var(--color-dark-60);
+  .button:active {
+    background-color: var(--color-dark-20);
   }
 }
-.botton--link-blue {
+.button:active {
+  color: var(--color-light);
+  background-color: var(--color-blue-button);
+}
+.button--link-blue {
   color: var(--color-light);
   background-color: var(--color-blue-button);
 }
 @media (any-hover: hover) {
-  .botton--link-blue:hover {
+  .button--link-blue:hover {
     color: var(--color-light);
     background-color: var(--color-blue-button);
     opacity: 0.8;
   }
 }
 @media (any-hover: none) {
-  .botton--link-blue:active {
+  .button--link-blue:active {
     color: var(--color-light);
     background-color: var(--color-blue-button);
     opacity: 0.8;
@@ -779,6 +830,10 @@ button[aria-label]::before {
 .section {
   padding-block: 5rem 7.5rem;
 }
+.section--padding-bg {
+  padding-block: 2.5rem 10rem;
+  background-color: var(--color-gra-bg);
+}
 @media (width <= 47.99875rem) {
   .section {
     padding-block: 2.8125rem 3.75rem;
@@ -789,6 +844,20 @@ button[aria-label]::before {
     display: flex;
     justify-content: center;
   }
+}
+.section__header:not(:last-child) {
+  margin-bottom: 2rem;
+}
+.section__header-menu-categories:not(:last-child) {
+  margin-bottom: 5rem;
+}
+.section__header-menu-categories-list {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
+.section__header-title {
+  line-height: 1.32;
 }
 
 .hero {
@@ -869,6 +938,78 @@ button[aria-label]::before {
   top: 50%;
   right: 0.6875rem;
   transform: translateY(-50%);
+}
+
+.ads-feed {
+  display: flex;
+  flex-direction: column;
+  row-gap: 2.5rem;
+}
+.ads-feed__button-load-more {
+  display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
+  align-self: center;
+  padding: 0.75rem 3rem;
+  border: 1px solid var(--color-dark);
+}
+@media (any-hover: hover) {
+  .ads-feed__button-load-more:hover {
+    color: var(--color-blue-button);
+    border-color: var(--color-blue-button);
+  }
+  .ads-feed__button-load-more:hover svg path {
+    stroke: var(--color-blue-button);
+  }
+}
+@media (any-hover: none) {
+  .ads-feed__button-load-more:active {
+    color: var(--color-blue-button);
+    border-color: var(--color-blue-button);
+  }
+  .ads-feed__button-load-more:active svg path {
+    stroke: var(--color-blue-button);
+  }
+}
+
+.ads-feed-card {
+  position: relative;
+  background-color: var(--color-light);
+}
+.ads-feed-card__button {
+  top: 9.3125rem;
+  left: 1rem;
+  position: absolute;
+}
+.ads-feed-card__body {
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 16px;
+}
+.ads-feed-card__title {
+  line-height: 1.5rem;
+}
+.ads-feed-card__title-link {
+  color: var(--color-dark);
+}
+@media (any-hover: hover) {
+  .ads-feed-card__title-link:hover {
+    color: var(--color-blue-button);
+  }
+}
+@media (any-hover: none) {
+  .ads-feed-card__title-link:active {
+    color: var(--color-blue-button);
+  }
+}
+.ads-feed-card__price {
+  align-self: flex-end;
+}
+.ads-feed-card__footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /*# sourceMappingURL=style.css.map */
